Relates to jrburke/requirejs#333 and jrburke/requirejs#420: make sure to normalize plugin ids, and update shim test to match latest 420 output

--- a/tests/shim/shim.html
+++ b/tests/shim/shim.html
@@ -10,21 +10,9 @@
 
         require({
                 baseUrl: './',
-                shim: {
-                    a: {
-                        exports: function () {
-                            return this.A.name;
-                        }
-                    },
-                    'b': ['a', 'd'],
-                    'c': {
-                        deps: ['a', 'b'],
-                        exports: 'C'
-                    }
-                }
             },
-            ['a', 'c'],
-            function(a, c) {
+            ['a', 'c', 'e'],
+            function(a, c, e) {
                 doh.register(
                     'shimBasic',
                     [
@@ -34,6 +22,7 @@
                             t.is('b', c.b.name);
                             t.is('c', c.name);
                             t.is('d', c.b.dValue.name);
+                            t.is('e', e.name);
                         }
                     ]
                 );
