Do not build almond in the test files, I keep forgetting to run the buildTest.sh script to generate them.

--- a/tests/mapConfig/mapConfig.html
+++ b/tests/mapConfig/mapConfig.html
@@ -4,7 +4,8 @@
     <title>require.js: Map Config Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="mapConfig-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="mapConfig.js"></script>
 </head>
 <body>
     <h1>require.js: Map Config Test</h1>
