--- a/tests/plugins/plugins.html
+++ b/tests/plugins/plugins.html
@@ -4,7 +4,8 @@
     <title>almond: Simple Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="plugins-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="plugins.js"></script>
     <script type="text/javascript">
         requirejs.config({
                 baseUrl: "./"
