--- a/tests/plugins/text.html
+++ b/tests/plugins/text.html
@@ -4,7 +4,8 @@
     <title>almond: Text Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="text-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="text.js"></script>
     <script type="text/javascript">
     require(
         ["require", "widget"],
