--- a/tests/shim/shim.html
+++ b/tests/shim/shim.html
@@ -4,7 +4,8 @@
     <title>almond: Shim Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="shim-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="shim.js"></script>
     <script type="text/javascript">
 	var master = new doh.Deferred();
 
