--- a/tests/mapConfig/mapConfigSpecificity.html
+++ b/tests/mapConfig/mapConfigSpecificity.html
@@ -4,7 +4,8 @@
     <title>require.js: Map Config Specificity Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="mapConfigSpecificity-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="mapConfigSpecificity.js"></script>
 </head>
 <body>
     <h1>require.js: Map Config Specificity Test</h1>
