--- a/tests/mapConfig/mapConfigStar.html
+++ b/tests/mapConfig/mapConfigStar.html
@@ -4,7 +4,8 @@
     <title>require.js: Map Config Star Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="mapConfigStar-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="mapConfigStar.js"></script>
 </head>
 <body>
     <h1>require.js: Map Config Star Test</h1>
