--- a/tests/moduleConfig/moduleConfig.html
+++ b/tests/moduleConfig/moduleConfig.html
@@ -4,7 +4,8 @@
     <title>almond: moduleConfig Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="moduleConfig-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="moduleConfig.js"></script>
     <script type="text/javascript">
 	var master = new doh.Deferred();
 
