--- a/tests/plugins/coffee.html
+++ b/tests/plugins/coffee.html
@@ -4,7 +4,8 @@
     <title>almond: Coffee Test</title>
     <script type="text/javascript" src="../doh/runner.js"></script>
     <script type="text/javascript" src="../doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="coffee-built.js"></script>
+    <script src="../../almond.js"></script>
+    <script type="text/javascript" src="coffee.js"></script>
     <script type="text/javascript">
     require(["cs!csmain"],
         function(csmain) {
