--- a/tests/simple.html
+++ b/tests/simple.html
@@ -4,7 +4,8 @@
     <title>almond: Simple Test</title>
     <script type="text/javascript" src="doh/runner.js"></script>
     <script type="text/javascript" src="doh/_browserRunner.js"></script>
-    <script type="text/javascript" src="simple-built.js"></script>
+    <script src="../almond.js"></script>
+    <script type="text/javascript" src="simple.js"></script>
     <script type="text/javascript">
 	var master = new doh.Deferred();
 
